# web-crawler

./: .env.example  .gitignore  BACKLOG.md  RECOMMENDED_ARCHITECTURE.md  docker-compose.yml  pyproject.toml
common/: __init__.py
docs/: local-runtime.md
services/: __init__.py
services/fetcher/: __init__.py
services/frontier_shard/: __init__.py
services/ingest_api/: __init__.py
specs/: SPEC_DATA_AND_EVENT_CONTRACTS.md  SPEC_DISTRIBUTED_WEB_CRAWLER_ARCHITECTURE.md
tests/: test_smoke.py
