[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "web-crawler"
version = "0.1.0"
description = "Distributed web crawler system design project"
readme = "RECOMMENDED_ARCHITECTURE.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.11.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = [
  "common*",
  "services*",
]

[tool.pytest.ini_options]
pythonpath = ["."]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra"
filterwarnings = [
  "error",
]

[tool.ruff]
line-length = 100
target-version = "py39"
exclude = [
  ".git",
  ".mypy_cache",
  ".pytest_cache",
  ".ruff_cache",
  ".tox",
  ".venv",
  "venv",
  "build",
  "dist",
  "storage",
]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
]
ignore = [
  "E501",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false
